--- a/.factory/_light.scss
+++ b/.factory/_light.scss
@@ -85,11 +85,11 @@
   --fill-tab--hover: #{shade(98%)};
   --fill-tab: #{shade(98%)};
   --fill: #{shade(100%)};
-  --shadow-button--focus: 0 0 0 3px rgba(0, 0, 0, .05);
-  --shadow-input--focus: 0 0 0 3px rgba(0, 0, 0, .05);
-  --shadow-input--invalid: 0 0 0 3px rgba(255, 0, 0, .15);
+  --shadow-button--focus: 0 0 0 3px rgba(0, 0, 0, 0.05);
+  --shadow-input--focus: 0 0 0 3px rgba(0, 0, 0, 0.05);
+  --shadow-input--invalid: 0 0 0 3px rgba(255, 0, 0, 0.15);
   --stroke--active: #{shade(45%)};
-  --stroke--focus-visible: rgba(0, 0, 0, .125);
+  --stroke--focus-visible: rgba(0, 0, 0, 0.125);
   --stroke--focus: #{shade(55%)};
   --stroke--hover: #{shade(55%)};
   --stroke-code-block: #{shade(65%)};
@@ -124,7 +124,7 @@
   --color-tag-picker__tag--read-only: #{shade(40%)};
   --color-tag-picker__tag-x: #{shade(30%)};
   --color-tag-picker__tag: #{shade(25%)};
-  --fill-option-picker__option--selected: rgba(0, 0, 0, .025);
+  --fill-option-picker__option--selected: rgba(0, 0, 0, 0.025);
   --fill-tag-picker__tag--disabled: #{shade(85%)};
   --fill-tag-picker__tag--focus: #{shade(70%)};
   --fill-tag-picker__tag--read-only: #{shade(80%)};
@@ -132,7 +132,7 @@
   --fill-tag-picker__tag: #{shade(75%)};
   @each $v in (hover, focus, active) {
     --color-option-picker__option--#{$v}: var(--color);
-    --fill-option-picker__option--#{$v}: rgba(0, 0, 0, .05);
+    --fill-option-picker__option--#{$v}: rgba(0, 0, 0, 0.05);
   }
   @each $v in (hover, focus) {
   }
