--- a/.factory/index.css.scss
+++ b/.factory/index.css.scss
@@ -15,7 +15,7 @@ $mix: #fff;
 [pattern],
 [required] {
   &:focus:invalid {
-    --stroke--focus-visible: rgba(255, 0, 0, .125);
+    --stroke--focus-visible: rgba(255, 0, 0, 0.125);
   }
 }
 
