--- a/.factory/_dark.scss
+++ b/.factory/_dark.scss
@@ -29,6 +29,7 @@
   --color-menu-link--hover: #{shade(40%)};
   --color-menu-link: #{shade(40%)};
   --color-menu-status: #{shade(65%)};
+  --color-output: inherit;
   --color-stack--active: #{shade(70%)};
   --color-stack--current: #{shade(60%)};
   --color-stack--disabled: #{shade(20%)};
