--- a/.factory/_light.scss
+++ b/.factory/_light.scss
@@ -29,6 +29,7 @@
   --color-menu-link--hover: #{shade(40%)};
   --color-menu-link: #{shade(40%)};
   --color-menu-status: #{shade(30%)};
+  --color-output: inherit;
   --color-stack--active: #{shade(30%)};
   --color-stack--current: #{shade(30%)};
   --color-stack--disabled: #{shade(65%)};
