--- a/.factory/_dark.scss
+++ b/.factory/_dark.scss
@@ -22,13 +22,15 @@
   --color-link--focus: #{shade(50%)};
   --color-link--hover: #{shade(40%)};
   --color-link: #{shade(40%)};
-  --color-menu-link--active: #{shade(50%)};
-  --color-menu-link--current: #{shade(60%)};
-  --color-menu-link--disabled: #{shade(20%)};
-  --color-menu-link--focus: #{shade(50%)};
-  --color-menu-link--hover: #{shade(40%)};
-  --color-menu-link: #{shade(40%)};
-  --color-menu-status: #{shade(65%)};
+  @each $v in (menu, menus) {
+    --color-#{$v}-link--active: #{shade(50%)};
+    --color-#{$v}-link--current: #{shade(60%)};
+    --color-#{$v}-link--disabled: #{shade(20%)};
+    --color-#{$v}-link--focus: #{shade(50%)};
+    --color-#{$v}-link--hover: #{shade(40%)};
+    --color-#{$v}-link: #{shade(40%)};
+    --color-#{$v}-status: #{shade(65%)};
+  }
   --color-output: inherit;
   --color-stack--active: #{shade(70%)};
   --color-stack--current: #{shade(60%)};
@@ -74,11 +76,13 @@
   --fill-input--hover: #{shade(5%)};
   --fill-input: #{shade(5%)};
   --fill-mark: #{shade(10%)};
-  --fill-menu-link--active: #{shade(1%)};
-  --fill-menu-link--current: #{shade(2%)};
-  --fill-menu-link--focus: #{shade(1%)};
-  --fill-menu-link--hover: #{shade(1%)};
-  --fill-menu-status: #{shade(5%)};
+  @each $v in (menu, menus) {
+    --fill-#{$v}-link--active: #{shade(1%)};
+    --fill-#{$v}-link--current: #{shade(2%)};
+    --fill-#{$v}-link--focus: #{shade(1%)};
+    --fill-#{$v}-link--hover: #{shade(1%)};
+    --fill-#{$v}-status: #{shade(5%)};
+  }
   --fill-stack--current: none;
   --fill-stack--hover: #{shade(1%)};
   --fill-stack: #{shade(1%)};
@@ -144,6 +148,15 @@
       &:hover,
       &:active {
         --fill-menu-link--current: #{shade(3%)};
+      }
+    }
+  }
+  .lot\:menus {
+    a {
+      &:focus,
+      &:hover,
+      &:active {
+        --fill-menus-link--current: #{shade(3%)};
       }
     }
   }
