--- a/.factory/index.css.scss
+++ b/.factory/index.css.scss
@@ -10,6 +10,7 @@ $mix: #fff;
   --color-fix: inherit;
   --color-mark: inherit;
   --color-output: inherit;
+  --fill-tab--current: var(--fill, none);
 }
 
 [pattern],
