--- a/.factory/_light.scss
+++ b/.factory/_light.scss
@@ -17,6 +17,11 @@
   --color-input--hover: #{shade(20%)};
   --color-input--invalid: #{mix(red, shade(20%), 50%)};
   --color-input: #{shade(20%)};
+  --color-input__file-selector-button--active: #{shade(30%)};
+  --color-input__file-selector-button--disabled: #{shade(75%)};
+  --color-input__file-selector-button--focus: #{shade(30%)};
+  --color-input__file-selector-button--hover: #{shade(40%)};
+  --color-input__file-selector-button: #{shade(40%)};
   --color-link--active: #{shade(30%)};
   --color-link--disabled: #{shade(75%)};
   --color-link--focus: #{shade(30%)};
@@ -86,7 +91,6 @@
   --fill-stack--current: none;
   --fill-stack--hover: #{shade(98%)};
   --fill-stack: #{shade(98%)};
-  --fill-tab--current: none;
   --fill-tab--hover: #{shade(98%)};
   --fill-tab: #{shade(98%)};
   --fill: #{shade(100%)};
@@ -139,8 +143,6 @@
     --color-option-picker__option--#{$v}: var(--color);
     --fill-option-picker__option--#{$v}: rgba(0, 0, 0, 0.05);
   }
-  @each $v in (hover, focus) {
-  }
   blockquote,
   caption,
   figcaption,
@@ -166,8 +168,11 @@
     }
   }
   .is\:folder {
+    &::before {
+      --stroke-folder-icon: transparent;
+    }
     &::after {
-      --fill-folder-icon: #{darken(shade(60%), 15%)};
+      --stroke-folder-icon: #{darken(shade(60%), 15%)};
     }
   }
   @each $v in (file, folder, page) {
