--- a/.factory/_dark.scss
+++ b/.factory/_dark.scss
@@ -180,4 +180,8 @@
       }
     }
   }
+  .not\:active {
+    --color-code: var(--color--disabled);
+    --color-link: var(--color-link--disabled);
+  }
 }
