--- a/.factory/_light.scss
+++ b/.factory/_light.scss
@@ -97,6 +97,11 @@
   --stroke--active: #{shade(45%)};
   --stroke--focus-visible: rgba(0, 0, 0, 0.125);
   --stroke--focus: #{shade(55%)};
+  --stroke-button--active: transparent;
+  --stroke-button--disabled: transparent;
+  --stroke-button--focus: transparent;
+  --stroke-button--hover: transparent;
+  --stroke-button: transparent;
   --stroke-code-block: #{shade(65%)};
   --stroke-file-icon: #{shade(60%)};
   --stroke-fix: #{shade(60%)};
