--- a/index.css
+++ b/index.css
@@ -129,6 +129,11 @@
   --stroke--active: #434343;
   --stroke--focus-visible: rgba(255, 255, 255, 0.025);
   --stroke--focus: #383838;
+  --stroke-button--active: transparent;
+  --stroke-button--disabled: transparent;
+  --stroke-button--focus: transparent;
+  --stroke-button--hover: transparent;
+  --stroke-button: transparent;
   --stroke-code-block: #2d2d2d;
   --stroke-file-icon: #646464;
   --stroke-fix: #383838;
@@ -338,6 +343,11 @@
   --stroke--active: #858585;
   --stroke--focus-visible: rgba(0, 0, 0, 0.125);
   --stroke--focus: #9c9c9c;
+  --stroke-button--active: transparent;
+  --stroke-button--disabled: transparent;
+  --stroke-button--focus: transparent;
+  --stroke-button--hover: transparent;
+  --stroke-button: transparent;
   --stroke-code-block: #b2b2b2;
   --stroke-file-icon: #a7a7a7;
   --stroke-fix: #a7a7a7;
