--- a/.factory/_light.scss
+++ b/.factory/_light.scss
@@ -1,4 +1,5 @@
-.is\:light {
+.is-light,
+.is\:light { // Mecha < 3.3
   --color--disabled: #{shade(65%)};
   --color-bar-link--active: #{shade(30%)};
   --color-bar-link--current: #{shade(30%)};
