--- a/.factory/_dark.scss
+++ b/.factory/_dark.scss
@@ -139,10 +139,14 @@
   --color-tag-picker__tag: #{shade(75%)};
   --fill-option-picker__option--selected: rgba(255, 255, 255, 0.025);
   --fill-tag-picker__tag--disabled: #{shade(5%)};
-  --fill-tag-picker__tag--focus: #{shade(15%)};
+  --fill-tag-picker__tag--focus: #{shade(10%)};
   --fill-tag-picker__tag--read-only: #{shade(8%)};
   --fill-tag-picker__tag--selected: #{shade(15%)};
   --fill-tag-picker__tag: #{shade(10%)};
+  --stroke-tag-picker__tag--focus: #{shade(15%)};
+  .tag-picker__tag[aria-pressed]:focus {
+    --stroke-tag-picker__tag--selected: #{shade(20%)};
+  }
   @each $v in (hover, focus, active) {
     --color-option-picker__option--#{$v}: var(--color);
     --fill-option-picker__option--#{$v}: rgba(255, 255, 255, 0.05);
