--- a/index.css
+++ b/index.css
@@ -186,16 +186,21 @@
   --color-tag-picker__tag: #c8c8c8;
   --fill-option-picker__option--selected: rgba(255, 255, 255, 0.025);
   --fill-tag-picker__tag--disabled: #2d2d2d;
-  --fill-tag-picker__tag--focus: #434343;
+  --fill-tag-picker__tag--focus: #383838;
   --fill-tag-picker__tag--read-only: #343434;
   --fill-tag-picker__tag--selected: #434343;
   --fill-tag-picker__tag: #383838;
+  --stroke-tag-picker__tag--focus: #434343;
   --color-option-picker__option--hover: var(--color);
   --fill-option-picker__option--hover: rgba(255, 255, 255, 0.05);
   --color-option-picker__option--focus: var(--color);
   --fill-option-picker__option--focus: rgba(255, 255, 255, 0.05);
   --color-option-picker__option--active: var(--color);
   --fill-option-picker__option--active: rgba(255, 255, 255, 0.05);
+}
+.is-dark .tag-picker__tag[aria-pressed]:focus,
+.is\:dark .tag-picker__tag[aria-pressed]:focus {
+  --stroke-tag-picker__tag--selected: #4e4e4e;
 }
 .is-dark blockquote,
 .is-dark caption,
@@ -422,16 +427,21 @@
   --color-tag-picker__tag: #595959;
   --fill-option-picker__option--selected: rgba(0, 0, 0, 0.025);
   --fill-tag-picker__tag--disabled: #dedede;
-  --fill-tag-picker__tag--focus: #bdbdbd;
+  --fill-tag-picker__tag--focus: #c8c8c8;
   --fill-tag-picker__tag--read-only: lightgray;
   --fill-tag-picker__tag--selected: #bdbdbd;
   --fill-tag-picker__tag: #c8c8c8;
+  --stroke-tag-picker__tag--focus: lightgray;
   --color-option-picker__option--hover: var(--color);
   --fill-option-picker__option--hover: rgba(0, 0, 0, 0.05);
   --color-option-picker__option--focus: var(--color);
   --fill-option-picker__option--focus: rgba(0, 0, 0, 0.05);
   --color-option-picker__option--active: var(--color);
   --fill-option-picker__option--active: rgba(0, 0, 0, 0.05);
+}
+.is-light .tag-picker__tag[aria-pressed]:focus,
+.is\:light .tag-picker__tag[aria-pressed]:focus {
+  --stroke-tag-picker__tag--selected: #dedede;
 }
 .is-light blockquote,
 .is-light caption,
