--- a/.factory/_light.scss
+++ b/.factory/_light.scss
@@ -135,17 +135,17 @@
   --color-option-picker__option: var(--color);
   --color-tag-picker__tag--disabled: #{shade(40%)};
   --color-tag-picker__tag--read-only: #{shade(40%)};
-  --color-tag-picker__tag-x: #{shade(30%)};
   --color-tag-picker__tag: #{shade(25%)};
+  --color-tag-picker__x: #{shade(30%)};
   --fill-option-picker__option--selected: rgba(0, 0, 0, 0.025);
   --fill-tag-picker__tag--disabled: #{shade(85%)};
   --fill-tag-picker__tag--focus: #{shade(75%)};
   --fill-tag-picker__tag--read-only: #{shade(80%)};
   --fill-tag-picker__tag--selected: #{shade(70%)};
   --fill-tag-picker__tag: #{shade(75%)};
-  --stroke-tag-picker__tag--focus: #{shade(80%)};
+  --stroke-tag-picker__tag--focus: #{shade(60%)};
   .tag-picker__tag[aria-pressed]:focus {
-    --stroke-tag-picker__tag--selected: #{shade(85%)};
+    --stroke-tag-picker__tag--selected: #{shade(55%)};
   }
   @each $v in (hover, focus, active) {
     --color-option-picker__option--#{$v}: var(--color);
